--- a/app/src/main/res/layout/activity_main_left_dialog.xml
+++ b/app/src/main/res/layout/activity_main_left_dialog.xml
@@ -33,23 +33,24 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="裁判员"
                     android:textColor="@color/white"
                     android:textSize="22px"/>
 
                 <TextView
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10px"
-                    android:text="ZW-Z0333"
                     android:textColor="@color/white"
                     android:textSize="22px"/>
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
