--- a/app/src/main/res/layout/activity_main_right_base_view.xml
+++ b/app/src/main/res/layout/activity_main_right_base_view.xml
@@ -23,8 +23,10 @@
         android:id="@+id/iv_activity_main_right_item_item_dui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
         android:src="@drawable/activity_main_button_right"
-        android:visibility="gone"/>
+        />
 
     <ImageView
         android:id="@+id/iv_activity_main_right_item_item_cuo"
