--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,10 +50,10 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_curr_page_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40px"
-                    android:text="BOM票箱空故障处理"
                     android:textColor="#404040"
                     android:textSize="30px"
                     android:textStyle="bold"/>
