--- a/app/src/main/res/layout/activity_main_right_base_view.xml
+++ b/app/src/main/res/layout/activity_main_right_base_view.xml
@@ -23,8 +23,7 @@
         android:id="@+id/iv_activity_main_right_item_item_dui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusableInTouchMode="true"
-        android:focusable="true"
+        android:visibility="gone"
         android:src="@drawable/activity_main_button_right"
         />
 
@@ -33,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18px"
-        android:src="@mipmap/activity_main_button_error"
+        android:src="@drawable/activity_main_button_error"
         android:visibility="gone"/>
 
     <ImageView
@@ -41,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18px"
-        android:src="@mipmap/activity_main_button_cut"
+        android:src="@drawable/activity_main_button_cut"
         android:visibility="gone"/>
 
     <ImageView
@@ -49,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18px"
-        android:src="@mipmap/activity_main_button_add"
+        android:src="@drawable/activity_main_button_add"
         android:visibility="gone"/>
 
     <TextView
