--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="white">#FFFFFF</color>
 
     <color name="setup_text">#303030</color>
+    <color name="red_text">#DC143C	</color>
     <color name="title_bg">#434343</color>
     <color name="topbar_text">#4D515C</color>
     <color name="line_color">#626262</color>
